--- a/diversification.slides.html
+++ b/diversification.slides.html
@@ -13245,7 +13245,9 @@ a.anchor-link {
 <p><font size="5"></p>
 <h3 id="Eco-evolutionary-dynamics-on-networks:-From-diversification-to-coexistence-in-complex-ecosystems">Eco-evolutionary dynamics on networks: From diversification to coexistence in complex ecosystems<a class="anchor-link" href="#Eco-evolutionary-dynamics-on-networks:-From-diversification-to-coexistence-in-complex-ecosystems">&#182;</a></h3><p><font size="3"></p>
 <hr>
-<p>Carlos J. Melián, IFISC, Mallorca, June 15, 2022</p>
+<p>Carlos J. Melián</p>
+<p>EAWAG, ETH-Domain, Switzerland &amp; IFISC, Spain</p>
+<p>IFISC, Mallorca, June 15, 2022</p>
 <h3 id="https://github.com/melian009/Diversa.git"><a href="https://github.com/melian009/Diversa.git">https://github.com/melian009/Diversa.git</a><a class="anchor-link" href="#https://github.com/melian009/Diversa.git">&#182;</a></h3><hr>
 
 </div>
@@ -13254,15 +13256,15 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Outline">Outline<a class="anchor-link" href="#Outline">&#182;</a></h1><h1 id="What-is-a-species?">What is a species?<a class="anchor-link" href="#What-is-a-species?">&#182;</a></h1><h2 id="Does-diversification-increase-in-the-tropics?">Does diversification increase in the tropics?<a class="anchor-link" href="#Does-diversification-increase-in-the-tropics?">&#182;</a></h2><h3 id="Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">Why are there some lineages with many species while others have just a few?<a class="anchor-link" href="#Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">&#182;</a></h3><h4 id="How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">How do diversification and coexistence connect each other in complex ecosystems?<a class="anchor-link" href="#How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">&#182;</a></h4><h5 id="How-would-the-next-unifying-diversification-and-biodiversity-theory-look-like?">How would the next unifying diversification and biodiversity theory look like?<a class="anchor-link" href="#How-would-the-next-unifying-diversification-and-biodiversity-theory-look-like?">&#182;</a></h5>
+<p><img src="figures/collaboratorsnew2.png" alt="drawing" width="800"/></p>
+
 </div>
 </div>
 </div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="figures/collaborators.png" alt="drawing" width="600"/></p>
-
+<h1 id="Outline">Outline<a class="anchor-link" href="#Outline">&#182;</a></h1><h1 id="What-is-a-species?">What is a species?<a class="anchor-link" href="#What-is-a-species?">&#182;</a></h1><h2 id="Does-diversification-increase-in-the-tropics?">Does diversification increase in the tropics?<a class="anchor-link" href="#Does-diversification-increase-in-the-tropics?">&#182;</a></h2><h3 id="Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">Why are there some lineages with many species while others have just a few?<a class="anchor-link" href="#Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">&#182;</a></h3><h4 id="How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">How do diversification and coexistence connect each other in complex ecosystems?<a class="anchor-link" href="#How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">&#182;</a></h4><h5 id="How-does-the-next-unifying-diversification-theory-look-like?">How does the next unifying diversification theory look like?<a class="anchor-link" href="#How-does-the-next-unifying-diversification-theory-look-like?">&#182;</a></h5>
 </div>
 </div>
 </div></section><section>
@@ -13280,7 +13282,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="References">References<a class="anchor-link" href="#References">&#182;</a></h3><h4 id="Do-the-tropics-produce-more-species?">Do the tropics produce more species?<a class="anchor-link" href="#Do-the-tropics-produce-more-species?">&#182;</a></h4><ul>
+<h4 id="Do-the-tropics-produce-more-species?">Do the tropics produce more species?<a class="anchor-link" href="#Do-the-tropics-produce-more-species?">&#182;</a></h4><ul>
 <li>Brown, J. (2014). Why are there so many species in the tropics? J. of Biogeography, 41:8-22  </li>
 <li>Mannion, P. D., et al (2014). The latitudinal biodiversity gradient through deep time. TREE, 29:42-50.</li>
 <li>Leprieur, F. et al. (2016). Plate tectonics drive tropical reef biodiversity dynamics. Nature Communications, 7:1-8       </li>
@@ -13292,7 +13294,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="References">References<a class="anchor-link" href="#References">&#182;</a></h3><h4 id="Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">Why are there some lineages with many species while others have just a few?<a class="anchor-link" href="#Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">&#182;</a></h4><ul>
+<h4 id="Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">Why are there some lineages with many species while others have just a few?<a class="anchor-link" href="#Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">&#182;</a></h4><ul>
 <li>Davies, TJ, Allen, AP, Borda‐de‐Água, L, Regetz, J, and Melián CJ (2011). Neutral biodiversity theory can explain the imbalance of phylogenetic trees but not the tempo of their diversification. Evolution 65:1841-1850.</li>
 <li>Wagner, C. E. (2012). Ecological opportunity and sexual selection together predict adaptive radiation. Nature, 487:366-369.    </li>
 </ul>
@@ -13303,13 +13305,12 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="References">References<a class="anchor-link" href="#References">&#182;</a></h3><h4 id="How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">How do diversification and coexistence connect each other in complex ecosystems?<a class="anchor-link" href="#How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">&#182;</a></h4><ul>
+<h4 id="How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">How do diversification and coexistence connect each other in complex ecosystems?<a class="anchor-link" href="#How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">&#182;</a></h4><ul>
 <li>Brown, W. L. Jr. (1957). Centrifugal Speciation. The Quarterly Review of Biology, 32:247-277.</li>
 <li>Melián CJ, Alonso D, Vázquez DP, Regetz J, and Allesina S (2010) Frequency-Dependent Selection Predicts Patterns of Radiations and Biodiversity. PLOS Comput. Biol., 6:e1000892. </li>
 <li>Melián CJ, Alonso D, Allesina S, Condit RS, and Etienne RS (2012) Does Sex Speed Up Evolutionary Rate and Increase Biodiversity?. PLOS Comput. Biol., 8:e1002414.</li>
 <li>Melián CJ, Seehausen O, Eguíluz VM, Fortuna MA, and Deiner K (2015). Diversification and biodiversity dynamics of hot and cold spots. Ecography, 38:393-401. </li>
-<li>Encinas, F, Etienne R, and Melián CJ (2022). Eco-evolutionary diversification of trait convergence and complementarity in
-mutualistic networks (In preparation) </li>
+<li>Encinas, F, Etienne R, and Melián CJ (2022). Eco-evolutionary diversification of trait convergence and complementarity in mutualistic networks (In prep.) </li>
 </ul>
 
 </div>
@@ -13318,7 +13319,7 @@ mutualistic networks (In preparation) </li>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="References">References<a class="anchor-link" href="#References">&#182;</a></h3><h4 id="How-would-the-next-unifying-diversification-and-biodiversity-theory-look-like?">How would the next unifying diversification and biodiversity theory look like?<a class="anchor-link" href="#How-would-the-next-unifying-diversification-and-biodiversity-theory-look-like?">&#182;</a></h4><ul>
+<h4 id="How-does-the-next-unifying-diversification-theory-look-like?">How does the next unifying diversification theory look like?<a class="anchor-link" href="#How-does-the-next-unifying-diversification-theory-look-like?">&#182;</a></h4><ul>
 <li>Marques, DA, Meier, JI and Seehausen O. (2019). A combinatorial view on speciation and adaptive radiation. Trends in ecology and evolution 34:531-544    </li>
 </ul>
 
@@ -13522,11 +13523,7 @@ mutualistic networks (In preparation) </li>
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script></p>
-
-<pre><code>                                                 ### Hot spots 
-
-</code></pre>
-<h1 id="Genomes-in-the-landscape-(threshold,-$\mathcal{D}_{max}$);-$D$-=-$[d_{ij}]$-and-$d_{ij}$-$\leq$-$\mathcal{D}_{max}$">Genomes in the landscape (threshold, $\mathcal{D}_{max}$); $D$ = $[d_{ij}]$ and $d_{ij}$ $\leq$ $\mathcal{D}_{max}$<a class="anchor-link" href="#Genomes-in-the-landscape-(threshold,-$\mathcal{D}_{max}$);-$D$-=-$[d_{ij}]$-and-$d_{ij}$-$\leq$-$\mathcal{D}_{max}$">&#182;</a></h1><p><img src="figures/Threshold2.png" alt="drawing" width="700"/></p>
+<h3 id="Genomes-in-the-landscape-(threshold,-$\mathcal{D}_{max}$);-$D$-=-$[d_{ij}]$-and-$d_{ij}$-$\leq$-$\mathcal{D}_{max}$">Genomes in the landscape (threshold, $\mathcal{D}_{max}$); $D$ = $[d_{ij}]$ and $d_{ij}$ $\leq$ $\mathcal{D}_{max}$<a class="anchor-link" href="#Genomes-in-the-landscape-(threshold,-$\mathcal{D}_{max}$);-$D$-=-$[d_{ij}]$-and-$d_{ij}$-$\leq$-$\mathcal{D}_{max}$">&#182;</a></h3><p><img src="figures/Threshold2.png" alt="drawing" width="700"/></p>
 
 </div>
 </div>
@@ -13603,7 +13600,7 @@ m_{ij}^{k} = \left\{
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="How-would-the-next-unifying-diversification-theory-look-like?">How would the next unifying diversification theory look like?<a class="anchor-link" href="#How-would-the-next-unifying-diversification-theory-look-like?">&#182;</a></h1>
+<h1 id="How-does-the-next-unifying-diversification-theory-look-like?">How does the next unifying diversification theory look like?<a class="anchor-link" href="#How-does-the-next-unifying-diversification-theory-look-like?">&#182;</a></h1>
 </div>
 </div>
 </div></section><section>
