--- a/divaflow.slides.html
+++ b/divaflow.slides.html
@@ -14661,10 +14661,11 @@ div.jp-OutputPrompt {
 <p><font size="5"></p>
 <h3 id="Diversification,-trait-architecture-and-coexistence-in-complex-ecosystems">Diversification, trait architecture and coexistence in complex ecosystems<a class="anchor-link" href="#Diversification,-trait-architecture-and-coexistence-in-complex-ecosystems">&#182;</a></h3><p><font size="3"></p>
 <hr>
-<p>Carlos J. Melián
-  EAWAG</p>
+<p>Carlos J. Melián</p>
+<p>EAWAG</p>
 <p>WSL, November 16, 2022</p>
 <h3 id="Download-from-https://github.com/melian009/Diversa.git">Download from <a href="https://github.com/melian009/Diversa.git">https://github.com/melian009/Diversa.git</a><a class="anchor-link" href="#Download-from-https://github.com/melian009/Diversa.git">&#182;</a></h3><hr>
+<p>The species concept is still challenging biology, ecology and evolution. Take the Latitudinal Biodiversity Gradient (LBG). Do the Tropics produce more species? LBG looks to be gone in deep time. Environmental gradients, dynamic landscapes in time and space might be external causes for diversifying lineages, and huge progress has been made to build a diversification theory along these lines. Yet, most lineages strongly differ in diversification rates. Why? Some contain thousands of species while others just a few. What if DNA, genomic processes, development, gene expression, behavior, sexual selection all embedded in complex trait architectures combine with external factors to produce a set of interacting layers challenging any attempt to build a solid diversification theory? Experimental evolution brings light to the speciation process. Many studies have shown ecological diversification from bacterial communities to eukaryotic taxa. Theoretical speciation models, from population genetics to statistical physics have also shown predictions fitting diversifying lineages but theory connecting external and internal processes to experiments and empirical data to understand diversification to coexistence remains open. In this talk I will discuss around these questions, some existing gaps and the challenges ahead for building synthesis in a diversification theory.</p>
 
 </div>
 </div>
@@ -14998,6 +14999,17 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
+</div></section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="LBG-might-be-gone-in-deep-time.-Environmental-gradients-and-landscape-dynamics-in-time-and-space-might-be-external-explanations-for-diversifying-lineages.">LBG might be gone in deep time. Environmental gradients and landscape dynamics in time and space might be external explanations for diversifying lineages.<a class="anchor-link" href="#LBG-might-be-gone-in-deep-time.-Environmental-gradients-and-landscape-dynamics-in-time-and-space-might-be-external-explanations-for-diversifying-lineages.">&#182;</a></h3>
+</div>
+</div>
+</div>
 </div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
@@ -15005,7 +15017,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="LBG-is-gone-in-deep-time.-Environmental-gradients,-time-and-space-might-be-external-explanations-for-diversifying-lineages.">LBG is gone in deep time. Environmental gradients, time and space might be external explanations for diversifying lineages.<a class="anchor-link" href="#LBG-is-gone-in-deep-time.-Environmental-gradients,-time-and-space-might-be-external-explanations-for-diversifying-lineages.">&#182;</a></h3><h1 id="Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">Why are there some lineages with many species while others have just a few?<a class="anchor-link" href="#Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">&#182;</a></h1>
+<h1 id="Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">Why are there some lineages with many species while others have just a few?<a class="anchor-link" href="#Why-are-there-some-lineages-with-many-species-while-others-have-just-a-few?">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -15018,17 +15030,6 @@ div.jp-OutputPrompt {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><img src="figures/biogeographyradiations.png" alt="drawing" width="700"/></p>
 
-</div>
-</div>
-</div>
-</div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h4 id="What-if-DNA,-development,-gene-expression,-behavior-and-sexual-selection-combine-with-external-factors-to-produce-a-complex-set-of-interacting-layers-challenging-speciation-events?">What if DNA, development, gene expression, behavior and sexual selection combine with external factors to produce a complex set of interacting layers challenging speciation events?<a class="anchor-link" href="#What-if-DNA,-development,-gene-expression,-behavior-and-sexual-selection-combine-with-external-factors-to-produce-a-complex-set-of-interacting-layers-challenging-speciation-events?">&#182;</a></h4><h1 id="How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">How do diversification and coexistence connect each other in complex ecosystems?<a class="anchor-link" href="#How-do-diversification-and-coexistence-connect-each-other-in-complex-ecosystems?">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -15047,49 +15048,14 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div></section><section>
+</div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script></p>
-<h3 id="Genomes-in-the-landscape-(threshold,-$%5Cmathcal%7BD%7D_%7Bmax%7D$);-$D$-=-$%5Bd_%7Bij%7D%5D$-and-$d_%7Bij%7D$-$%5Cleq$-$%5Cmathcal%7BD%7D_%7Bmax%7D$">Genomes in the landscape (threshold, $\mathcal{D}_{max}$); $D$ = $[d_{ij}]$ and $d_{ij}$ $\leq$ $\mathcal{D}_{max}$<a class="anchor-link" href="#Genomes-in-the-landscape-(threshold,-$%5Cmathcal%7BD%7D_%7Bmax%7D$);-$D$-=-$%5Bd_%7Bij%7D%5D$-and-$d_%7Bij%7D$-$%5Cleq$-$%5Cmathcal%7BD%7D_%7Bmax%7D$">&#182;</a></h3><p><img src="figures/Threshold2.png" alt="drawing" width="700"/></p>
-
-</div>
-</div>
-</div>
-</div></section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script><h1 id="Gene-flow,-($%5Cmathcal%7BM%7D$)">Gene flow, ($\mathcal{M}$)<a class="anchor-link" href="#Gene-flow,-($%5Cmathcal%7BM%7D$)">&#182;</a></h1><p>Symmetric gene flow
-\begin{equation}
-m_{ij}^{k} = \frac{\mathcal{M}}{d_{ij}}
-\end{equation}</p>
-<p>Centripetal gene flow
-\begin{equation}
-m_{ij}^{k} = \left\{
-\begin{array}{ll}
- \frac{\mathcal{M}}{d_{ij}} &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}}{d_{il}}\leq \sum_{l=1}^{\mathcal{S}} d_{jl} ,  \\
- 0 &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}} d_{il} &gt; \sum_{l=1}^{\mathcal{S}} d_{jl}
-  \end{array}
- \right.
-\end{equation}</p>
-<p>Centrifugal gene flow
-\begin{equation}
-m_{ij}^{k} = \left\{
-\begin{array}{ll}
- \frac{\mathcal{M}}{d_{ij}} &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}}{d_{il}}\geq \sum_{l=1}^{\mathcal{S}} d_{jl} ,  \\
- 0 &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}} d_{il} &lt; \sum_{l=1}^{\mathcal{S}} d_{jl}
-  \end{array}
- \right.
-\end{equation}</p>
-
+<h4 id="What-if-DNA,-genomic-processes,-development,-gene-expression,-behavior,-sexual-selection-all-embedded-in-complex-trait-architectures-combine-with-external-factors-to-produce-a-set-of-interacting-layers-challenging-any-attempt-to-build-a-solid-diversification-theory?">What if DNA, genomic processes, development, gene expression, behavior, sexual selection all embedded in complex trait architectures combine with external factors to produce a set of interacting layers challenging any attempt to build a solid diversification theory?<a class="anchor-link" href="#What-if-DNA,-genomic-processes,-development,-gene-expression,-behavior,-sexual-selection-all-embedded-in-complex-trait-architectures-combine-with-external-factors-to-produce-a-set-of-interacting-layers-challenging-any-attempt-to-build-a-solid-diversification-theory?">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -15100,23 +15066,6 @@ m_{ij}^{k} = \left\{
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script><p>Given $\mathcal{J}$, $\mathcal{L}$, $\mu$, $\mathcal{Q}_{min}$, $\mathcal{D}_{max}$, and $\mathcal{M}$
-<img src="figures/fig2all.png" alt="drawing" width="500"/></p>
-
-</div>
-</div>
-</div>
-</div></section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-
-<pre><code>                                 ### Diversification and convergence 
-
-</code></pre>
 <p><img style="float: left;" src="figures/CichlidsLeft.png" alt="drawing" width="200"/></p>
 <p><img style="float: right;" src="figures/CichlidsRight.png" alt="drawing" width="200"/></p>
 
@@ -15172,19 +15121,6 @@ m_{ij}^{k} = \left\{
 </div>
 </div>
 </div>
-</div></section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="The-big-4-layers">The big 4 layers<a class="anchor-link" href="#The-big-4-layers">&#182;</a></h3><h4 id="System-Biology----Genomics----Phenome----Environments-and-Biogeography">System Biology -- Genomics -- Phenome -- Environments and Biogeography<a class="anchor-link" href="#System-Biology----Genomics----Phenome----Environments-and-Biogeography">&#182;</a></h4><h5 id="Universal?-Bottom-up?Top-down?-Independent?-Hybrids?-Fluctuating?">Universal? Bottom up?Top down? Independent? Hybrids? Fluctuating?<a class="anchor-link" href="#Universal?-Bottom-up?Top-down?-Independent?-Hybrids?-Fluctuating?">&#182;</a></h5><div>
-<img src="figures/Cas.pdf.png-1.png" alt="drawing" width="2500"/>
-</div>
-</div>
-</div>
-</div>
 </div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
@@ -15193,11 +15129,11 @@ m_{ij}^{k} = \left\{
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Take-home-message">Take home message<a class="anchor-link" href="#Take-home-message">&#182;</a></h2><ul>
-<li><p>Speciation is a complex process -- physical, chemical and biological processes drive the emergence of new genotypes and phenotypes along diversification stages</p>
+<li><p>Speciation is a complex process -- physical, chemical and biological processes drive the emergence of new genotypes and phenotypes along a sequence of diversification stages</p>
 </li>
 <li><p>External and internal factors combine to produce heterogeneous diversification patterns in space and time. These combined with the intensity and directionality of gene flow might play a critical role to anticipate the radiation of a lineage and the formation of hot and cold spots in diversification</p>
 </li>
-<li><p>Toy models useful to understand main basic speciation processes -- yet, current data suggest systems biology, genomics, phenomes, and fluctuating environments all together are needed to connect micro to macro diversification ands biodiversity patterns</p>
+<li><p>Toy models useful to understand main basic speciation processes -- current data suggest systems biology, genomics, phenomes, and fluctuating environments and landscapes all together are needed to connect micro to macro diversification and biodiversity patterns</p>
 </li>
 </ul>
 
