--- a/divaflow.slides.html
+++ b/divaflow.slides.html
@@ -15005,7 +15005,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="LBG-might-be-gone-in-deep-time.-Environmental-gradients-and-landscape-dynamics-in-time-and-space-might-be-external-explanations-for-diversifying-lineages.">LBG might be gone in deep time. Environmental gradients and landscape dynamics in time and space might be external explanations for diversifying lineages.<a class="anchor-link" href="#LBG-might-be-gone-in-deep-time.-Environmental-gradients-and-landscape-dynamics-in-time-and-space-might-be-external-explanations-for-diversifying-lineages.">&#182;</a></h3>
+<h1 id="LBG-might-be-gone-in-deep-time.-Environmental-gradients-and-landscape-dynamics-in-time-and-space-are-external-explanations-for-diversifying-lineages.">LBG might be gone in deep time. Environmental gradients and landscape dynamics in time and space are external explanations for diversifying lineages.<a class="anchor-link" href="#LBG-might-be-gone-in-deep-time.-Environmental-gradients-and-landscape-dynamics-in-time-and-space-are-external-explanations-for-diversifying-lineages.">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -15065,8 +15065,35 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img style="float: left;" src="figures/CichlidsLeft.png" alt="drawing" width="200"/></p>
-<p><img style="float: right;" src="figures/CichlidsRight.png" alt="drawing" width="200"/></p>
+<p><img src="figures/IntegrationGradient.png" alt="drawing" width="500"/></p>
+
+</div>
+</div>
+</div>
+</div></section><section><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
+</div></section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="figures/correlationtraits.png" alt="drawing" width="500"/></p>
 
 </div>
 </div>
@@ -15078,7 +15105,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="figures/IBModel6.png" alt="drawing" width="700"/></p>
+<p><img src="figures/Heatmap.pdf.png-1.png" alt="drawing" width="500"/></p>
 
 </div>
 </div>
@@ -15090,9 +15117,54 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img style="float: left;" src="figures/hummingbirds.jpg" alt="drawing" width="200"/> 
-<img style="float: center;" src="figures/QPmatrix.png" alt="drawing" width="400"/>
-<img style="float: right;" src="figures/comcon.png" alt="drawing" width="400"/></p>
+<p><script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script></p>
+<h3 id="Genomes-in-the-landscape-(threshold,-$%5Cmathcal%7BD%7D_%7Bmax%7D$);-$D$-=-$%5Bd_%7Bij%7D%5D$-and-$d_%7Bij%7D$-$%5Cleq$-$%5Cmathcal%7BD%7D_%7Bmax%7D$">Genomes in the landscape (threshold, $\mathcal{D}_{max}$); $D$ = $[d_{ij}]$ and $d_{ij}$ $\leq$ $\mathcal{D}_{max}$<a class="anchor-link" href="#Genomes-in-the-landscape-(threshold,-$%5Cmathcal%7BD%7D_%7Bmax%7D$);-$D$-=-$%5Bd_%7Bij%7D%5D$-and-$d_%7Bij%7D$-$%5Cleq$-$%5Cmathcal%7BD%7D_%7Bmax%7D$">&#182;</a></h3><p><img src="figures/Threshold2.png" alt="drawing" width="700"/></p>
+
+</div>
+</div>
+</div>
+</div></section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script><h1 id="Gene-flow,-($%5Cmathcal%7BM%7D$)">Gene flow, ($\mathcal{M}$)<a class="anchor-link" href="#Gene-flow,-($%5Cmathcal%7BM%7D$)">&#182;</a></h1><p>Symmetric gene flow
+\begin{equation}
+m_{ij}^{k} = \frac{\mathcal{M}}{d_{ij}}
+\end{equation}</p>
+<p>Centripetal gene flow
+\begin{equation}
+m_{ij}^{k} = \left\{
+\begin{array}{ll}
+ \frac{\mathcal{M}}{d_{ij}} &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}}{d_{il}}\leq \sum_{l=1}^{\mathcal{S}} d_{jl} ,  \\
+ 0 &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}} d_{il} &gt; \sum_{l=1}^{\mathcal{S}} d_{jl}
+  \end{array}
+ \right.
+\end{equation}</p>
+<p>Centrifugal gene flow
+\begin{equation}
+m_{ij}^{k} = \left\{
+\begin{array}{ll}
+ \frac{\mathcal{M}}{d_{ij}} &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}}{d_{il}}\geq \sum_{l=1}^{\mathcal{S}} d_{jl} ,  \\
+ 0 &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}} d_{il} &lt; \sum_{l=1}^{\mathcal{S}} d_{jl}
+  \end{array}
+ \right.
+\end{equation}</p>
+
+</div>
+</div>
+</div>
+</div></section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script><p>Given $\mathcal{J}$, $\mathcal{L}$, $\mu$, $\mathcal{Q}_{min}$, $\mathcal{D}_{max}$, and $\mathcal{M}$
+<img src="figures/fig2all.png" alt="drawing" width="500"/></p>
 
 </div>
 </div>
@@ -15108,6 +15180,22 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
+</div></section><section><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">Landscape</span> <span class="n">dynamics</span> <span class="n">animation</span> <span class="o">+</span> <span class="n">fluctuating</span> <span class="n">abundances</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
 </div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
