--- a/divaflow.slides.html
+++ b/divaflow.slides.html
@@ -15070,22 +15070,30 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div></section><section><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+</div></section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>Trait architecture</p>
 
-     </div>
 </div>
 </div>
 </div>
+</div></section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>Trait dimensionality</p>
 
+</div>
+</div>
+</div>
 </div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
@@ -15106,65 +15114,6 @@ div.jp-OutputPrompt {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><img src="figures/Heatmap.pdf.png-1.png" alt="drawing" width="900"/></p>
-
-</div>
-</div>
-</div>
-</div></section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script></p>
-<h3 id="Genomes-in-the-landscape-(threshold,-$%5Cmathcal%7BD%7D_%7Bmax%7D$);-$D$-=-$%5Bd_%7Bij%7D%5D$-and-$d_%7Bij%7D$-$%5Cleq$-$%5Cmathcal%7BD%7D_%7Bmax%7D$">Genomes in the landscape (threshold, $\mathcal{D}_{max}$); $D$ = $[d_{ij}]$ and $d_{ij}$ $\leq$ $\mathcal{D}_{max}$<a class="anchor-link" href="#Genomes-in-the-landscape-(threshold,-$%5Cmathcal%7BD%7D_%7Bmax%7D$);-$D$-=-$%5Bd_%7Bij%7D%5D$-and-$d_%7Bij%7D$-$%5Cleq$-$%5Cmathcal%7BD%7D_%7Bmax%7D$">&#182;</a></h3><p><img src="figures/Threshold2.png" alt="drawing" width="700"/></p>
-
-</div>
-</div>
-</div>
-</div></section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script><h1 id="Gene-flow,-($%5Cmathcal%7BM%7D$)">Gene flow, ($\mathcal{M}$)<a class="anchor-link" href="#Gene-flow,-($%5Cmathcal%7BM%7D$)">&#182;</a></h1><p>Symmetric gene flow
-\begin{equation}
-m_{ij}^{k} = \frac{\mathcal{M}}{d_{ij}}
-\end{equation}</p>
-<p>Centripetal gene flow
-\begin{equation}
-m_{ij}^{k} = \left\{
-\begin{array}{ll}
- \frac{\mathcal{M}}{d_{ij}} &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}}{d_{il}}\leq \sum_{l=1}^{\mathcal{S}} d_{jl} ,  \\
- 0 &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}} d_{il} &gt; \sum_{l=1}^{\mathcal{S}} d_{jl}
-  \end{array}
- \right.
-\end{equation}</p>
-<p>Centrifugal gene flow
-\begin{equation}
-m_{ij}^{k} = \left\{
-\begin{array}{ll}
- \frac{\mathcal{M}}{d_{ij}} &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}}{d_{il}}\geq \sum_{l=1}^{\mathcal{S}} d_{jl} ,  \\
- 0 &amp; \text{if} \;\;\sum_{l=1}^{\mathcal{S}} d_{il} &lt; \sum_{l=1}^{\mathcal{S}} d_{jl}
-  \end{array}
- \right.
-\end{equation}</p>
-
-</div>
-</div>
-</div>
-</div></section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML'></script><p>Given $\mathcal{J}$, $\mathcal{L}$, $\mu$, $\mathcal{Q}_{min}$, $\mathcal{D}_{max}$, and $\mathcal{M}$
-<img src="figures/fig2all.png" alt="drawing" width="500"/></p>
 
 </div>
 </div>
