--- a/tag2/divaflow.slides.html
+++ b/tag2/divaflow.slides.html
@@ -14661,8 +14661,7 @@ div.jp-OutputPrompt {
 <p><font size="5"></p>
 <h3 id="Diversification,-trait-architecture-and-coexistence-in-complex-ecosystems">Diversification, trait architecture and coexistence in complex ecosystems<a class="anchor-link" href="#Diversification,-trait-architecture-and-coexistence-in-complex-ecosystems">&#182;</a></h3><p><font size="3"></p>
 <hr>
-<p>Carlos J. Melián</p>
-<p>EAWAG</p>
+<p>Carlos J. Melián, EAWAG</p>
 <p>WSL, November 16, 2022</p>
 <h3 id="Download-from-https://github.com/melian009/Diversa.git">Download from <a href="https://github.com/melian009/Diversa.git">https://github.com/melian009/Diversa.git</a><a class="anchor-link" href="#Download-from-https://github.com/melian009/Diversa.git">&#182;</a></h3><hr>
 
